trunk/Archive2/a7/00a51f71eecde1/output
main.cpp:10:33: error: use of undeclared identifier 'e'
    printf("PARSE ERROR: %s\n", e.what());
                                ^
1 error generated.
