trunk/Archive2/a7/00a51f71eecde1/main.cpp
#include <fstream>
#include <iostream>
#include <iomanip>




int main(int argc, char* argv[])
{
    printf("PARSE ERROR: %s\n", e.what());
    return 1;
}
